# ai

./: .gitignore  Cargo.toml  Taskfile.yml  docker-compose.yml
api/ai/: Cargo.toml  Dockerfile
api/ai/src/event_handler/: mod.rs
api/ai/src/framework/: hooks.rs  scenarios.rs
api/ai/src/framework/commands/tts/: mod.rs  speaker.rs
api/ai/src/libs/fs/: mod.rs
api/ai/src/logger/: mod.rs
api/ai/src/utils/: types.rs
api/tts/: .gitignore  Dockerfile  install_models.sh  pyproject.toml
api/tts/app/: app.py
api/tts/tts/: tts.py
src/: main.rs
src/api/: endpoints.rs  mod.rs
src/config/: mod.rs
src/framework/: mod.rs
src/framework/commands/: mod.rs
src/framework/commands/tts/: mod.rs  sample_rate.rs  speaker.rs
src/static_clients/: mod.rs
src/utils/: mod.rs
