[package]
authors = ["dehwyy <dehwyyy@gmail.com>"]
edition = "2021"
name = "ai"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
envconfig = "0.11.0"
poise = "0.6.1"
reqwest = {version = "0.11.27", features = ["json"]}
serenity = {version = "0.12.4", features = ["gateway", "client", "framework", "voice", "http"]}
songbird = "0.4.6"
symphonia = {features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2"}
tokio = {version = "1.42", features = ["macros", "rt-multi-thread"]}
